--- a/microservices-saga-choreography-pattern/order-service/src/main/resources/application.yml
+++ b/microservices-saga-choreography-pattern/order-service/src/main/resources/application.yml
@@ -11,15 +11,15 @@ spring:
           destination: orders
         transactionEventProcessor-in-0:
           destination: transactions
-  datasource:
-    url: jdbc:h2:mem:order_db;DB_CLOSE_DELAY=-1
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
-    maximum-pool-size: 100
   jpa:
     hibernate:
       ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
     database: H2
     generate-ddl: true
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/test_saga_order_db
+    maximum-pool-size: 100
+    username: postgres
+    password: postgres
